Move songs already ranked

--- a/ui/src/app/create-chart-interactive/rank-songs/rank-songs.component.css
+++ b/ui/src/app/create-chart-interactive/rank-songs/rank-songs.component.css
@@ -14,3 +14,11 @@
 .song-to-place {
     margin-bottom: 2rem;
 }
+
+.selected {
+    background-color: lightblue;
+}
+
+.clickable {
+    cursor: pointer;
+}
