--- a/ui/src/app/create-chart-interactive/rank-songs/rank-songs.component.html
+++ b/ui/src/app/create-chart-interactive/rank-songs/rank-songs.component.html
@@ -1,12 +1,17 @@
 <div class="centre">
     <h1>Rank Songs</h1>
-    <div class="song-to-place centre" *ngIf="session && session.songOrder.length != 0">
+    <div class="song-to-place centre" *ngIf="session && session.songOrder.length != 0 && songToMove == null">
         <p>Please select where you would like to place the following song:</p>
         <div class="song-box centre">
             <p *ngIf="session?.songOrder.length">
                 {{session.songOrder[0].artistDisplay}} - {{session.songOrder[0].title}}
             </p>
         </div>
+    </div>
+    <div class="song-to-place centre"  *ngIf="songToMove != null">
+        <p>
+            You have selected a song in the ranking. Move this to where you wish, or click again to return to placing new songs.
+        </p>
     </div>
     <table *ngIf="session?.placedSongs" (mouseleave)="removeInsertButtons()">
         <tr class="centre">
@@ -17,7 +22,7 @@
         </tr>
         <ng-container *ngFor="let song of session.placedSongs; let i = index">
             <tr class="centre">
-                <div (mouseenter)="setInsertButtonsToDisplay(i)" class="song-box centre">
+                <div (click)="selectSongToMove(i)" (mouseenter)="setInsertButtonsToDisplay(i)" class="song-box centre clickable" [class.selected]="i === songToMove">
                     <p>{{song.artistDisplay}} - {{song.title}}</p>
                 </div>
                 <button class="insert-button" *ngIf="session && session.songOrder.length != 0 && insertButtonsToDisplay.includes(i)" (click)="addSong(i + 1)">Insert Here</button>
