stick song to rank to the top

--- a/ui/src/app/create-chart-interactive/rank-songs/rank-songs.component.css
+++ b/ui/src/app/create-chart-interactive/rank-songs/rank-songs.component.css
@@ -13,6 +13,12 @@
 
 .song-to-place {
     margin-bottom: 2rem;
+    padding-bottom: 1rem;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: white;
+    border-bottom: 1px solid black;
 }
 
 .selected {
