add option to copy chart songs

--- a/ui/src/app/chart-display/chart-display.component.html
+++ b/ui/src/app/chart-display/chart-display.component.html
@@ -4,6 +4,7 @@
         <div class="dropdown-content">
             <div class="dropdown-option" (click)="copyPlaintext()">Copy Plaintext Chart</div>
             <div class="dropdown-option" (click)="copyBBCode()">Copy BBCode Chart</div>
+            <div class="dropdown-option" (click)="copyChartSongs()">Copy Chart Songs</div>
         </div>
     </div>
     <a routerLink="./edit" title="Edit Details"><fa-icon [icon]="faPenSquare" class="fa-lg"></fa-icon></a>
